--- a/src/app/Views/UI/registro/registro.component.html
+++ b/src/app/Views/UI/registro/registro.component.html
@@ -1,49 +1,59 @@
 <div class="overlay" style="padding-top: 1rem;">
-  <form style="padding-top: 0;">
-    <div class="con">
-      <header class="head-form">
-        <h2>Registrar Cuenta</h2>
-        <p>Ingresa los datos solicitados</p>
-      </header>
-
-      <div class="field-set">
-        <span class="input-item">
-          <i class="fa fa-user-circle"></i>
-        </span>
-        <input class="form-input" id="correo" type="email" placeholder="@Correo" [value]="correo_usuario" (input)="actualizarCorreo($event)" required />
-        <br />
-
-        <span class="input-item">
-          <i class="fa fa-key"></i>
-        </span>
-        <input class="form-input" type="password" id="contraseña" name="password" placeholder="Contraseña" [value]="contrasena_usuario" (input)="actualizarContrasena($event)" required />
-        <br />
-
-        <span class="input-item">
-          <i class="fa fa-key"></i>
-        </span>
-        <input class="form-input" type="password" id="confirmarContraseña" name="contraseña" placeholder="Confirmar Contraseña" [value]="confirmar_contrasena" (input)="actualizarconfirmarContrasena($event)" required />
-        <br />
-
-        <span class="input-item">
-          <i class="fa fa-user-circle"></i>
-        </span>
-        <input class="form-input" id="numeroPersonal" type="text" placeholder="NumeroPersonal" [value]="NPersonal_usuario" (input)="actualizarNumeroPersonal($event)" required />
-
-        <input style="margin-top: 1rem;" type="file" (change)="GuardarImagen($event)">
-        <img class="img-preview" *ngIf="imageURL" [src]="imageURL" alt="Imagen Subida">
-
-        <button class="log-in" (click)="CrearCuenta()">Crear Cuenta</button>
-      </div>
-
-      <div class="other">
-        <button class="btn submits sign-up" (click)="IniciarSesion()">
-          Iniciar Sesión!
-          <i class="fa fa-user-plus" aria-hidden="true"></i>
-        </button>
-      </div>
-    </div>
-  </form>
+  <table>
+    <tr>
+      <td>
+        <div class="other">
+          <header class="head-button">
+            <h2>¿Ya estás registrado?</h2>
+          </header>
+          <button class="btn_submits_sign-up" (click)="IniciarSesion()">
+            Iniciar Sesión
+          </button>
+        </div>
+      </td>
+      <td>
+        <form style="padding-top: 0;">
+          <div class="con">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/Logo_de_la_Universidad_Veracruzana.svg" alt="uvlogo">
+            <header class="head-form">
+              <h2>Registrar docente</h2>
+            </header>
+      
+            <div class="field-set">
+              <span class="input-item">
+                <i class="fa fa-user-circle"></i>
+              </span>
+              <input class="form-input" id="correo" type="email" placeholder="@Correo" [value]="correo_usuario" (input)="actualizarCorreo($event)" required />
+              <br />
+      
+              <span class="input-item">
+                <i class="fa fa-key"></i>
+              </span>
+              <input class="form-input" type="password" id="contraseña" name="password" placeholder="Contraseña" [value]="contrasena_usuario" (input)="actualizarContrasena($event)" required />
+              <br />
+      
+              <span class="input-item">
+                <i class="fa fa-key"></i>
+              </span>
+              <input class="form-input" type="password" id="confirmarContraseña" name="contraseña" placeholder="Confirmar Contraseña" [value]="confirmar_contrasena" (input)="actualizarconfirmarContrasena($event)" required />
+              <br />
+      
+              <span class="input-item">
+                <i class="fa fa-user-circle"></i>
+              </span>
+              <input class="form-input" id="numeroPersonal" type="text" placeholder="NumeroPersonal" [value]="NPersonal_usuario" (input)="actualizarNumeroPersonal($event)" required />
+      
+              <input style="margin-top: 1rem;" type="file" (change)="GuardarImagen($event)" class="img-preview">
+              <img class="img-preview" *ngIf="imageURL" [src]="imageURL" alt="Imagen Subida">
+      
+              <button class="log-in" (click)="CrearCuenta()">Crear Cuenta</button>
+            </div>
+          </div>
+        </form>
+      </td>
+    </tr>
+  </table>
+  
 
   <div *ngIf="Mensaje_Contrasena" class="MensajeMostrar">
     Las contraseñas no coinciden!!
