--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,3 +85,9 @@ body {
   z-index: 2;
 }
 
+#Login {
+  background: linear-gradient(to top, #011970, #44a0fe);
+  min-width: 100%;
+  min-height: 100%;
+  z-index: 2;
+}
