--- a/src/app/Views/UI/login/login.component.html
+++ b/src/app/Views/UI/login/login.component.html
@@ -1,52 +1,55 @@
 <div class="overlay" style="padding-top: 1rem">
-  <form>
-    <div class="con">
-      <header class="head-form">
-        <h2>Login Cuenta</h2>
-        <p>Ingresa los datos solicitados</p>
-      </header>
+  <table>
+    <tr>
+      <td class="registrar">
+        <div class="other">
+          <header class="head-button">
+            <h2>¿Aún no estás registrado?</h2>
+          </header>
+          <button class="btn_submits_sign-up" (click)="CrearCuenta()">
+            Registrarse
+          </button>
+        </div>
+      </td>
+      <td>
+        <form style="padding-top: 0;">
+          <div class="con">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/Logo_de_la_Universidad_Veracruzana.svg" alt="uvlogo">
+            <header class="head-form">
+              <h2>Iniciar sesión</h2>
+            </header>    
+            <div class="field-set">
+              <span class="input-item">
+                <i class="fa fa-user-circle"></i>
+              </span>
+              <input class="form-input" id="txt-input" type="email" placeholder="@UsuarioDemo: admin" [value]="username"
+                (input)="updateUsername($event)" required />
+              <br />
 
-      <br />
-      <div class="field-set">
-        <span class="input-item">
-          <i class="fa fa-user-circle"></i>
-        </span>
+              <span class="input-item">
+                <i class="fa fa-key"></i>
+              </span>
+              <input class="form-input" type="password" id="pwd" name="password" placeholder="@ContraseñaDemo: password"
+                [value]="password" (input)="updatePassword($event)" required />
+      
+              <span>
+                <i class="fa fa-eye" aria-hidden="true" type="button" id="eye"></i>
+              </span>
+      
+              <button class="log-in" (click)="IniciarSesion()" routerLink="Sistema/Inicio">
+                Iniciar Sesión
+              </button>
+              <button class="btn submits frgt-pass">Recuperar Contraseña</button>
 
-        <input class="form-input" id="txt-input" type="email" placeholder="@UsuarioDemo: admin" [value]="username"
-          (input)="updateUsername($event)" required />
-
-        <br />
-
-        <span class="input-item">
-          <i class="fa fa-key"></i>
-        </span>
-
-        <input class="form-input" type="password" id="pwd" name="password" placeholder="@ContraseñaDemo: password"
-          [value]="password" (input)="updatePassword($event)" required />
-
-        <span>
-          <i class="fa fa-eye" aria-hidden="true" type="button" id="eye"></i>
-        </span>
-
-        <br />
-        <button class="log-in" (click)="IniciarSesion()" routerLink="Sistema/Inicio">
-          Iniciar Sesión
-        </button>
-        <p *ngIf="loginFailed" class="error">
-          Credenciales inválidas. Inténtalo de nuevo.
-        </p>
-      </div>
-
-      <div class="other">
-        <button class="btn submits frgt-pass">Recuperar Contraseña</button>
-
-        <button class="btn submits sign-up" (click)="CrearCuenta()">
-          Crear Cuenta!
-          <i class="fa fa-user-plus" aria-hidden="true"></i>
-        </button>
-      </div>
-    </div>
-  </form>
+              <p *ngIf="loginFailed" class="error">
+                Credenciales inválidas. Inténtalo de nuevo.
+              </p>
+            </div>        
+          </div>
+        </form>
+      </td>
+    </tr>
+  </table>
 </div>
 
 <script>
