--- a/src/app/Views/UI/login/login.component.scss
+++ b/src/app/Views/UI/login/login.component.scss
@@ -12,23 +12,54 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
 
-  font-family: "Vibur", cursive;
-  font-family: "Abel", sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   opacity: 0.95;
 }
 
-form {
-  width: 450px;
-  min-height: 500px;
-  height: auto;
-  border-radius: 5px;
-  margin: 0% auto;
-  box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
-  padding: 7%;
-  background-image: linear-gradient(-225deg, #e3fdf5 50%, #ffe6fa 50%);
+table{
+  width: 100vw;
+  height: 100vh;
 }
 
-form .con {
+tr{
+  width: auto;
+}
+
+td.registrar{
+  width: 60%;
+}
+
+img{
+  display: block;
+  float: right;
+  width: 150px;
+  height: 150px;
+  margin-right: 10px;
+  margin-top: 20px;
+}
+
+div{
+  position: relative;
+}
+
+form {
+  position: relative;
+  float: right;
+  background-color: white;
+  width: 450px;
+  height: 100%;
+  box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+  padding: 7%;
+  padding-top: 0;
+}
+
+div.con {
+  width: 100%;
+  height: 100%;
+  padding: 0%;
+  position: relative;
+
   display: -webkit-flex;
   display: flex;
 
@@ -38,36 +69,57 @@ form .con {
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
 
-  margin: 0 auto;
+  margin: 0px;
 }
 
 header {
-  margin: 2% auto 10% auto;
+  margin: 2% auto 3% auto;
   text-align: center;
-}
-
-header h2 {
-  font-size: 250%;
-  font-family: "Playfair Display", serif;
-  color: #3e403f;
+  width: 100%;
+  height: auto;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 header p {
   letter-spacing: 0.05em;
 }
 
+header h2 {
+  margin: 2% auto 0% auto;
+  text-align: center;
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+header.head-button h2{
+  margin: 2% auto 0% auto;
+  color: #ffffff;
+  float: left;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  text-align: left;
+}
+
 .input-item {
+  
   background: #fff;
   color: #333;
   padding: 14.5px 0px 15px 9px;
   border-radius: 5px 0px 0px 5px;
 }
 
+i{
+  margin-left: 3%;
+}
+
 #eye {
   background: #fff;
   color: #333;
 
-  margin: 5.9px 0 0 0;
+  margin: 2% 5% 0 0;
   margin-left: -20px;
   padding: 15px 9px 19px 0px;
   border-radius: 0px 5px 5px 0px;
@@ -82,25 +134,29 @@ header p {
 }
 
 input[class="form-input"] {
-  width: 240px;
-  height: 50px;
+  display:inline-block;
 
-  margin-top: 2%;
+  width: 250px;
+  height: 50px;
+  margin-left: 5%;
+  margin-right: auto;
+  margin-top: 3%;
   padding: 15px;
 
   font-size: 16px;
-  font-family: "Abel", sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   color: #5e6472;
+
+  background-color: rgb(236, 236, 236);
 
   outline: none;
   border: none;
 
-  border-radius: 0px 5px 5px 0px;
+  border-radius: 50px;
   transition: 0.2s linear;
 }
-input[id="txt-input"] {
-  width: 250px;
-}
+
 /* focus  */
 input:focus {
   transform: translateX(-2px);
@@ -116,7 +172,7 @@ button {
 
   padding: 0 20px;
   background: #fff;
-  border-radius: 5px;
+  border-radius: 50px;
 
   outline: none;
   border: none;
@@ -127,11 +183,15 @@ button {
 
   margin: 7% auto;
   letter-spacing: 0.05em;
+
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  color: white;
 }
 
 .submits {
   width: 48%;
-  display: inline-block;
+  display: block;
   float: left;
   margin-left: 2%;
 }
@@ -147,11 +207,10 @@ button {
 button:hover {
   transform: translatey(3px);
   box-shadow: none;
-}
-
-button:hover {
   animation: ani9 0.4s ease-in-out infinite alternate;
 }
+
+
 @keyframes ani9 {
   0% {
     transform: translateY(3px);
@@ -160,3 +219,60 @@ button:hover {
     transform: translateY(5px);
   }
 }
+
+.btn_submits_sign-up{
+  background-color: #1977f1;
+  width: auto;
+  box-shadow: 30px, 30px, 5px, black;
+  z-index: 10;
+}
+
+.MensajeMandar {
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #ff3300;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+@keyframes fadeOut {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
+
+.overlay {
+  padding-top: 1rem;
+}
+
+.form-group {
+  position: relative;
+}
+
+.img-preview {
+  width: 100%;
+  height: auto;
+  max-height: 300px;
+  margin-top: 1rem;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.log-in{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(10, 192, 10);
+  width: auto;
+}
+
+.other{
+  margin-left: 20%;
+}
+
+div.field-set{
+  width: 100%;
+}
+
