--- a/src/app/Views/UI/docente/docente.component.scss
+++ b/src/app/Views/UI/docente/docente.component.scss
@@ -8,6 +8,7 @@ body {
   grid-template-columns: repeat(2,1fr);
   grid-gap: 0;
   grid-template-rows: repeat(6,1fr);
+  padding-right: 5%;
 }
 
 .Contenedor_Tarjeta {
@@ -36,6 +37,7 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
+  background-color: #011970;
 }
 .Informacion .image {
   position: relative;
