--- a/src/app/Views/UI/inicio/inicio.component.scss
+++ b/src/app/Views/UI/inicio/inicio.component.scss
@@ -3,7 +3,6 @@
   min-height: 100%;
   max-width: fit-content;
   max-height: fit-content;
-
   display: flex;
   flex-direction: row;
 }
@@ -34,10 +33,11 @@
   font-weight: 700;
   font-family: Montserrat, sans-serif;
   color: #404040;
+  padding: 40px 5px 10px 0px;
+  color: #011970;
 }
 
 .card {
-  background-color: #CED4DA;
   max-width: 300px;
   max-height: 800px;
   padding: 0;
@@ -46,10 +46,14 @@
   overflow: hidden;
   border-radius: 2rem;
   box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.5);
+  background-color: #011970;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  color: white;
 }
 
 .card .banner {
-  background-image: url("https://www.sifma.org/wp-content/uploads/2020/08/SIFMA-Ops-Virtual-Forum-2020-BKGD-768x460.png");
+  background-color: #070652;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -64,8 +68,8 @@
 
 .card h2.name {
   text-align: center;
-  padding: 0 0.5rem 0.5rem;
-  margin: 0;
+  padding: 20px 0.5rem 0.5rem;
+  margin-top: 20px;
   font-size: 20px;
 }
 .card .title {
@@ -107,7 +111,6 @@
   transition: color 100ms ease-in-out;
 }
 .card .actions .follow-info h2 p small {
-  color: black;
   font-size: 0.85rem;
   font-weight: normal;
 }
@@ -121,7 +124,7 @@
   color: inherit;
   font: inherit;
   font-weight: bold;
-  background-color: #97D4E5;
+  background-color: rgb(10, 192, 10);
   width: 100%;
   border: none;
   padding: 0.5rem;
