--- a/src/app/Views/UI/menu/menu.component.html
+++ b/src/app/Views/UI/menu/menu.component.html
@@ -1,13 +1,13 @@
 <main class="Navegador">
   <section class="Logo_Pagina">
     <div class="Logo_Pagina_img">
-      <img src="../../../../assets/menu/Escudo_Pagina.png" alt="" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/Logo_de_la_Universidad_Veracruzana.svg" alt="logo" />
     </div>
   </section>
 
   <section class="Nombre_Pagina">
     <div class="Nombre_Pagina_Text_Defualt">
-      FACULTAD DE <span class="Nombre_Pagina_Text_Defualt"> INGENIERÍA </span>
+      Universidad <span class="Nombre_Pagina_Text_Defualt"> Veracruzana </span>
     </div>
   </section>
 
