little changes on Inicio issue #3

--- a/src/app/Views/UI/menu/menu.component.scss
+++ b/src/app/Views/UI/menu/menu.component.scss
@@ -96,6 +96,7 @@
 
   align-content: center;
   justify-content: space-around;
+  margin: 7%;
 }
 
 .Rutas_Navegacion_Listado a {
@@ -104,7 +105,7 @@
   -webkit-text-fill-color: transparent;
   font-weight: 500;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 20px;
+  font-size: 30px;
 
   text-decoration: none;
   text-align: center;
@@ -122,6 +123,7 @@
   font-size: 16px;
   color: white;
   font-weight: 700;
+  font-size: 25px;
 }
 
 .Cerrar_Sesion_img {
