--- a/src/app/Views/UI/registro/registro.component.scss
+++ b/src/app/Views/UI/registro/registro.component.scss
@@ -7,9 +7,8 @@
 }
 
 body {
-  background-image: linear-gradient(-225deg, #e3fdf5 0%, #ffe6fa 100%);
-  background-image: linear-gradient(to top, rgb(0, 255, 242) 0%, #fed6e3 100%);
-
+  background-image: linear-gradient(-225deg, #fde3e3 0%, #ffe6fa 100%);
+  background-image: linear-gradient(to top, rgb(168, 237, 234) 0%, #fed6e3 100%);
   background-attachment: fixed;
   background-repeat: no-repeat;
 
@@ -269,4 +268,14 @@ button:hover {
 
 .other{
   margin-left: 20%;
+}
+
+p.error{
+  width: 100%;
+  font-size: 20px;
+}
+
+button.error{
+  font: 20px, normal, black
+  
 }
