--- a/src/app/Views/UI/inicio/inicio.component.html
+++ b/src/app/Views/UI/inicio/inicio.component.html
@@ -12,7 +12,7 @@
       <div class="actions">
         <div class="follow-info">
           <h2><p ><span *ngIf="!datos?.title"> {{materia.grupo}} </span><small>Grupo</small></p></h2>
-          <h2><p><span *ngIf="!datos?.title"> {{cantidad_alumnos[i]}} </span><small>Estudiantes</small></p></h2>
+          <h2><p><span *ngIf="!datos?.title"> {{materia.numero_de_alumnos}} </span><small>Estudiantes</small></p></h2>
         </div>
         <div class="follow-btn">
           <button (click)="enviarDato(materia.nrc, materia.licenciatura)"  routerLink="Listas">Lista Asistencia</button>
