--- a/src/app/Views/UI/menu/menu.component.scss
+++ b/src/app/Views/UI/menu/menu.component.scss
@@ -37,7 +37,7 @@
 
 .Nombre_Pagina {
   grid-column-start: 2;
-  grid-column-end: 3;
+  grid-column-end: 4;
 
   position: relative;
 
@@ -49,7 +49,7 @@
 }
 
 .Opciones_Rutas {
-  grid-column-start: 3;
+  grid-column-start: 4;
   grid-column-end: 6;
 
   position: relative;
@@ -77,14 +77,14 @@
 .Logo_Pagina_img img {
   width: 70%;
   height: 70%;
-  padding: 30px 40px;
+  padding: 10px 40px;
 }
 
 .Nombre_Pagina_Text_Defualt {
   background: white;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bolder;
   font-family: 'Poppins', sans-serif;
   font-family: 'Ubuntu', sans-serif;
@@ -113,7 +113,7 @@
 
 .Cerrar_Sesion {
   padding: 0;
-  margin: 0;
+  margin-right: 5%;
 }
 
 .Cerrar_Sesion button {
