--- a/src/app/Views/UI/docente/docente.component.scss
+++ b/src/app/Views/UI/docente/docente.component.scss
@@ -8,11 +8,12 @@ body {
   grid-template-columns: repeat(2,1fr);
   grid-gap: 0;
   grid-template-rows: repeat(6,1fr);
-  padding-right: 5%;
+  padding-right: 8%;
 }
 
 .Contenedor_Tarjeta {
-  grid-row: 2/7;
+  margin-top: 15%;
+  grid-row: 1/7;
   grid-column: 1/3;
   position: relative;
   margin-left: 5px;
@@ -27,7 +28,7 @@ body {
   height: 100%;
   width: 100%;
   background: rgba(0, 48, 73, $alpha: 1);
-  border-radius: 6px;
+  border-radius: 2rem;
   box-shadow: .5rem .5rem 1rem rgba(0, 0, 0, 0.5);
   overflow: hidden;
 }
@@ -109,7 +110,7 @@ body {
 }
 
 .Info_Span {
-  color: darkgray;
+  color: rgb(255, 255, 255);
 }
 
 svg {
