--- a/src/app/Views/UI/inicio/inicio.component.scss
+++ b/src/app/Views/UI/inicio/inicio.component.scss
@@ -73,11 +73,12 @@
   font-size: 20px;
 }
 .card .title {
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 15px;
   text-align: center;
   padding: 0 0.5rem 0.5rem;
 }
+
 .card .actions {
   padding: 0rem 2rem 1rem;
   display: flex;
