--- a/src/app/Views/UI/listas/listas.component.html
+++ b/src/app/Views/UI/listas/listas.component.html
@@ -1,53 +1,50 @@
-<form *ngIf="!listaAsistencia  || listaAsistencia.length == 0">
-  <input type="file" (change)="Archivo($event)" accept=".xlsx, .xls">
-</form>
-
 <button  *ngIf="!listaAsistencia  || listaAsistencia.length == 0" (click)="GuardarDatosEnFirestore()">Cargar archivo</button>
 
-<div *ngIf="vistaPreviaArchivo">
-  <h2>Previsualización del archivo:</h2>
-  <p>{{ vistaPreviaArchivo.name }}</p>
-
-  <div *ngIf="jsonData && jsonData.length > 0">
-    <table class="excel-table">
-      <thead>
-        <tr>
-          <th *ngFor="let header of jsonData[0]" [ngStyle]="{ width: 100 / jsonData[0].length + '%' }">{{ header }}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let row of jsonData.slice(1)">
-          <td *ngFor="let cell of row" [ngStyle]="{ width: 100 / jsonData[0].length + '%' }">
-            <div class="cell-content">{{ cell }}</div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+<div class="titulo-y-boton">
+  <h2 class="titulo">Lista de Asistencia</h2>
+  <div class="follow-btn">
+    <button (click)="Imprimir()">Descargar Lista</button>
   </div>
 </div>
 
-<table class="table table-striped table-hover" *ngIf="listaAsistencia && listaAsistencia.length > 0">
+<div class="Contenedor">
+  <table class="  table table-striped table-hover" *ngIf="listaAsistencia && listaAsistencia.length > 0">
   <thead>
-    <h2>Lista de Asistencia</h2>
     <tr>
       <th>Índice</th>
       <th>Alumno</th>
       <th>Matrícula</th>
       <th>Carrera</th>
       <th>Status</th>
+      <th>Asistencias</th>
+      <th>Inasistencias</th>
     </tr>
   </thead>
   <tbody>
     <ng-container *ngFor="let alumno of listaAsistencia; let i = index">
-      <tr class="Datos">
+      <tr class="Datos result" (mouseenter)="mostrarTarjeta = true; alumnoSeleccionado = alumno" (mouseleave)="mostrarTarjeta = false">
         <td>{{ i + 1 }}</td>
         <td>{{ alumno.Nombre }}</td>
         <td>{{ alumno.Matricula }}</td>
         <td>{{ alumno.Carrera }}</td>
         <td>{{ alumno.Status }}</td>
+        <td>{{ alumno.cantidad_asistencias}}</td>
+        <td>{{ alumno.cantidad_inasistencias}}</td>
       </tr>
     </ng-container>
   </tbody>
 </table>
+</div>
 
-<p *ngIf="mensajeSubir">Archivo cargado exitosamente.</p>
+<div class="datoshover" *ngIf="mostrarTarjeta">
+  <div class="foto">
+  </div>
+  <div class="tarjeta">
+    <p>Datos de asistencias de {{ alumnoSeleccionado.Nombre }}</p>
+    <!-- Mostrar aquí la información de asistencias del alumno seleccionado -->
+    <p>Asistencias: {{ alumnoSeleccionado.cantidad_asistencias }}</p>
+    <p>Inasistencias: {{ alumnoSeleccionado.cantidad_inasistencias }}</p>
+    <p>Derechos: {{alumnoSeleccionado.derecho}} </p>
+    <!-- Agrega más detalles de asistencias si es necesario -->
+  </div>
+</div>
