--- a/src/app/Views/UI/listas/listas.component.html
+++ b/src/app/Views/UI/listas/listas.component.html
@@ -1,4 +1,4 @@
-<button  *ngIf="!listaAsistencia  || listaAsistencia.length == 0" (click)="GuardarDatosEnFirestore()">Cargar archivo</button>
+<button  *ngIf="listaAsistencia  || listaAsistencia.length == 0" (click)="GuardarDatosEnFirestore()">Cargar archivo</button>
 
 <div class="titulo-y-boton">
   <h2 class="titulo">Lista de Asistencia</h2>
