--- a/src/app/Views/UI/docente/docente.component.scss
+++ b/src/app/Views/UI/docente/docente.component.scss
@@ -9,6 +9,7 @@ body {
   grid-gap: 0;
   grid-template-rows: repeat(6,1fr);
   padding-right: 8%;
+  margin-left: 8%;
 }
 
 .Contenedor_Tarjeta {
@@ -49,8 +50,8 @@ body {
 .Informacion .image .circle-1, .Informacion .image .circle-2 {
   position: absolute;
   box-sizing: border-box;
-  width: 76px;
-  height: 76px;
+  width: 96px;
+  height: 96px;
   top: -3px;
   left: -3px;
   border-width: 1px;
@@ -68,8 +69,8 @@ body {
   }
 }
 .Informacion .image .circle-2 {
-  width: 82px;
-  height: 82px;
+  width: 102px;
+  height: 102px;
   top: -6px;
   left: -6px;
   border-color: #edf2f4 transparent #edf2f4 #edf2f4;
