--- a/src/app/Views/UI/docente/docente.component.scss
+++ b/src/app/Views/UI/docente/docente.component.scss
@@ -164,7 +164,7 @@ svg {
   left: 51%;
   right: 51%;
   bottom: 0;
-  background: #643a7a;
+  background: #ffffff;
   height: 1px;
   transition-property: left, right;
   transition-duration: 0.3s;
