--- a/src/app/Views/UI/listas/listas.component.scss
+++ b/src/app/Views/UI/listas/listas.component.scss
@@ -75,6 +75,8 @@
   padding: 10px; /* Espacio interior de la tarjeta */
   box-shadow: 0 3px 20px rgba(0,0,0,0.1);
   border-radius: 2rem;
+  overflow-y: scroll;
+
 }
 
 .tarjeta p {
